<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".user.rankings.RankingsActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/tvRankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rankings"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRankings">

        <TableLayout
            android:id="@+id/tblRankings"
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="100dp"
            android:paddingTop="16dp"
            android:paddingEnd="100dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRankings">

            <TableRow
                style="android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/rank" />

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/username" />

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/chips" />

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/won" />

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/lost" />

                <TextView
                    style="@style/rankingsHeaderRow"
                    android:text="@string/games" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>