<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/btnLogin"
        style="@style/greenButton"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/greenButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

</androidx.constraintlayout.widget.ConstraintLayout>